2009-12-04  Juanma Barranquero  <lekktu@gmail.com>

	Fix `string-to-number' to deal consistently with integers and floats.
	* lread.c (isfloat_string): New argument ignore_trailing to accept all
	trailing characters, not just whitespace.
	(read1): Pass new arg 0 to keep old behavior.
	* data.c (Fstring_to_number): Pass 1 to isfloat_string to ignore
	trailing chars, as it is already done for integers.  Doc fixes.
	* lisp.h (isfloat_string): Add new arg to declaration of isfloat_string.

2009-12-04  Eli Zaretskii  <eliz@gnu.org>

	* dispextern.h (enum prop_idx) <AUTO_COMPOSED_PROP_IDX>: Delete
	unused enumeration value.

2009-12-03  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (lisp, shortlisp): Replace indian.el with indian.elc.

2009-12-03  Daniel Hackney  <dan@haxney.org>  (tiny change)

	* process.c (Fmake_network_process): Fix up the tests for
	"connectionless socket", so they DTRT for seqpacket sockets as well.

2009-12-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* process.c (Qseqpacket): New symbol.
	(HAVE_SEQPACKET): New macro.
	(Fmake_network_process): Accept new :type `seqpacket'.
	(init_process): Add `seqpacket' feature when applicable.
	(syms_of_process): Initialize Qseqpacket.

2009-12-01  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* font.c (font_load_for_lface, font_open_by_name): Don't store name
	if entity is Qnil.

2009-11-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* print.c (print_preprocess): Preprocess the key_and_value table of
	hashtables, even tho they're "hidden" (bug#5082).

2009-11-29  Jan Djärv  <jan.h.d@swipnet.se>

	* frame.c (frame_make_pointer_invisible)
	(frame_make_pointer_visible): Declare f before statements.

2009-11-28  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in [!AUTO_DEPEND]: Remove outdated comment about
	omitted dependencies on lisp.h.

2009-11-27  Jan Djärv  <jan.h.d@swipnet.se>

	* xftfont.c (xftfont_end_for_frame): Just return if dpyinfo->display
	is NULL.
